--- a/main.css
+++ b/main.css
@@ -1,3 +1,37 @@
 body {
   background-color: aliceblue;
 }
+.card {
+  display: inline-flex;
+  width: 400px;
+  border: solid 1px lightblue;
+}
+img {
+  width: 200px;
+  height: 200px;
+  margin: auto;
+}
+.card-img-one {
+  width: 150px;
+  height: 200px;
+  padding: 15px;
+}
+p {
+  font-size: 12px;
+  margin: 0px;
+  font-weight: bold;
+}
+.availability {
+  background-color: darkgray;
+  color:yellow;
+  width: 100%;
+}
+.card-title {
+  margin: auto;
+}
+h5 {
+  margin: 5px;
+}
+.valid {
+  font-size: 10px;
+}
